addressed placing different types of jumps, as well as a few minor bugs

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,6 +22,8 @@ li {
 
 .function-wrapper {
   display: inline-block;
+  vertical-align: top;
+  height: 100%;
   padding: 10px;
   text-align: center;
   border: 2px solid #AAAAAA;
